# Fast_Zero

./: .gitignore  models.py  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py
migrations/versions/: 729462caafc9_update_users_table_add_updated_at.py  cc1ef61e81e6_update_users_table_add_updated_at.py  de18170ce955_create_users_table.py
tests/: conftest.py  oldconftest.py  test_app.py  test_db.py  test_hello_world.py
